--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 ######################
 node/
 node_tmp/
-node_modules/
+
 
 ######################
 # SASS
@@ -136,5 +136,7 @@ Desktop.ini
 # ESLint
 ######################
 .eslintcache
+
+/node_modules/
 /src/main/webapp/bower_components/
 /src/main/webapp/scss/
